--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,20 @@
 header {
-  font-family: verdana, sans-serif;
+  display: flex;
+  font-family: "Verdana", sans-serif;
   font-size: 14px;
   font-weight: bold;
-  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
   }
+
+.logo {
+  display: flex;
+}
 
 .logo span {
   color: mediumaquamarine;
@@ -11,4 +22,16 @@ header {
 
 nav span {
   display: inline-block;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
 }
