Rewrote steps 1 and 2

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,26 @@
 header {
   display: flex;
-  font-family: "Verdana", sans-serif;
+  align-items: center;
+  font-family: "Verdana", san-serif;
   font-size: 14px;
   font-weight: bold;
-  align-items: center;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 80px;
   border-bottom: 1px solid black;
-  background-color: white;
-  }
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+}
 
 .logo {
   display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding: 20px;
+}
+
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-right: 12px;
 }
 
 .logo span {
@@ -22,16 +29,37 @@ header {
 
 nav span {
   display: inline-block;
+  padding: 20px 10px;
+}
+
+header nav {
+  padding-right: 50px;
+}
+
+.container {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 70px auto;
+  padding-top: 116px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
 }
 
 .column.large {
   width: 630px;
+  border: 1px solid;
 }
 
 .column.medium {
   width: 300px;
+  border: 1px solid;
 }
 
 .column.small {
   width: 240px;
+  border: 1px solid;
 }
